Allow cross-origin wotsit access stuff

--- a/YouDecideAPI/Web.config
+++ b/YouDecideAPI/Web.config
@@ -8,6 +8,11 @@
     </httpHandlers></system.web>
   
 <system.webServer>
+  <httpProtocol>
+    <customHeaders>
+      <add name="Access-Control-Allow-Origin" value="*"/>
+    </customHeaders>
+  </httpProtocol>
     <validation validateIntegratedModeConfiguration="false" />
     <httpErrors existingResponse="PassThrough" />
     <handlers>
