pulled sms into own class, model binding parameters to it, added default params to avoid null reference

--- a/YouDecideAPI/YouDecideAPI.csproj
+++ b/YouDecideAPI/YouDecideAPI.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Modules\InputModule.cs" />
     <Compile Include="Modules\StartModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmsMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\index.sshtml">
