--- a/YouDecide.Domain/YouDecide.Domain.csproj
+++ b/YouDecide.Domain/YouDecide.Domain.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IStoryNavigator.cs" />
     <Compile Include="StoryNavigator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoryPoint.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
