--- a/YouDecide.Tests/packages.config
+++ b/YouDecide.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="MongoDB.Bson" version="2.1.0" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.1.0" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.1.0" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
