--- a/YouDecide.Domain/YouDecide.Domain.csproj
+++ b/YouDecide.Domain/YouDecide.Domain.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameOption.cs" />
+    <Compile Include="GameState.cs" />
     <Compile Include="IDataAccess.cs" />
     <Compile Include="IStoryNavigator.cs" />
     <Compile Include="StoryNavigator.cs" />
