--- a/YouDecide.Domain/YouDecide.Domain.csproj
+++ b/YouDecide.Domain/YouDecide.Domain.csproj
@@ -35,6 +35,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Clockwork, Version=1.2.0.17472, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Clockwork.1.2\lib\net45\Clockwork.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MongoDB.Bson, Version=1.10.1.73, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL">
       <HintPath>..\packages\mongocsharpdriver.1.10.1\lib\net35\MongoDB.Bson.dll</HintPath>
       <Private>True</Private>
